# amplitrude-proxy

./: .env  .gitignore  Cargo.toml  Features.org  LICENSE.org  README.org  canary.nix  flake.nix  loadtest.js  spec.nix  verb.org
.cargo/: audit.toml
.github/workflows/: nix.yaml
conf/: conf.yaml
src/: config.rs  health.rs  k8s.rs  main.rs  metrics.rs  proxy.rs  trace.rs
src/k8s/: cache.rs
src/proxy/: annotate.rs  redact.rs  route.rs
