[package]
name = "amplitrude-proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
http = "1"
isbot = "0.1"
itertools = "0.14"
k8s-openapi = { version = "0.23.0", features = ["v1_30"] }
kube = { version = "0.96.0", default-features = false, features = ["client", "rustls-tls", "derive", "runtime"] }
lru = "0.12.4"
pingora = { version = "0.5", features = ["proxy", "cache", "rustls"] }
prometheus = "0.14"
ptrie = "0.7"
regex = "1"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
